[gd_scene load_steps=2 format=3 uid="uid://ctypscdrqssex"]

[ext_resource type="Script" path="res://value_node.gd" id="1_ifx1m"]

[node name="ValueNode" type="GraphNode"]
offset_right = 198.0
offset_bottom = 129.0
title = "Value"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_ifx1m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEditName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Name"

[node name="LineEditValue" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Value"

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="text_changed" from="VBoxContainer/LineEditName" to="." method="_on_line_edit_name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LineEditValue" to="." method="_on_line_edit_value_text_changed"]
